--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   bloc: ^9.0.1
   flutter_bloc: ^9.1.1
   get_it: ^8.2.0
+  connectivity_plus: ^7.0.0
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
