--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^8.2.0
   connectivity_plus: ^7.0.0
   dio: ^5.9.0
+  oxidized: ^6.2.0
 
 dev_dependencies:
   flutter_test:
