--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   connectivity_plus: ^7.0.0
   dio: ^5.9.0
   oxidized: ^6.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
