--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cached_network_image: ^3.4.1
   sqflite: ^2.4.2
   path: ^1.9.1
+  agora_rtc_engine: ^6.4.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
